--- a/App/package.json
+++ b/App/package.json
@@ -14,9 +14,9 @@
     },
     "devDependencies": {
         "@types/electron": "^1.6.10",
-        "electron": "^19.0.3",
-        "electron-builder": "^23.0.3",
-        "typescript": "^4.7.3"
+        "electron": "^20.0.1",
+        "electron-builder": "^23.3.3",
+        "typescript": "^4.7.4"
     },
     "build": {
         "productName": "defComms",
@@ -28,5 +28,10 @@
         "asarUnpack": [
             "*.node"
         ]
+    },
+    "dependencies": {
+        "express": "^4.18.1",
+        "net": "^1.0.2",
+        "ws": "^8.8.1"
     }
 }
