--- a/UI/package.json
+++ b/UI/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "pinia": "^2.0.17",
     "sass": "^1.54.4",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^18.6.5",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
