--- a/demut-electron-vue-template/package.json
+++ b/demut-electron-vue-template/package.json
@@ -22,10 +22,16 @@
     "chokidar": "^3.5.3",
     "electron": "^20.1.0",
     "electron-builder": "^23.3.3",
+    "prettier": "^2.7.1",
     "typescript": "^4.8.2",
     "vite": "^3.0.9"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "pinia": "^2.0.22",
     "vue": "^3.2.36",
     "vue-router": "4"
