Working live file directory watcher for drag and drop live updates to UI. Added initial configuration and the loader for it.

--- a/demut-electron-vue-template/src/main/tsconfig.json
+++ b/demut-electron-vue-template/src/main/tsconfig.json
@@ -9,6 +9,8 @@
     "outDir": "../../build/main",
     "allowJs": true,
     "noImplicitAny": false,
+    "resolveJsonModule": true,
+    "moduleResolution": "node"
   },
   "exclude": ["static"]
 }
